@@ -1,3 +1,7 @@
+07-01-20 : New skill in defensive abilities call Toughness. A stacking buff
+            that procs when getting hit and provides some immunity to
+            non-magic.
+            
 06-21-20 : New Discipline for Thieves and Monks called Offensive ABilities 
             and a Advanced Offense skill.
 
